--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Roast Game</title>
-    <style>
-        body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; }
-        #messageBox { border: 1px solid #ccc; height: 300px; overflow-y: scroll; padding: 10px; margin-top: 10px; }
-        input { width: 70%; padding: 10px; }
-        button { padding: 10px; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>🔥 Roast Battle</h1>
+    <div id="ai-container">
+    <div id="ai-character">🔥</div> </div>
+
     <div>
         HP: <b id="health">100</b> | Rage: <b id="rage">0</b>
     </div>
